# lorelei-thunks

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: LoreThunkBuildApi.cmake
docs/: HowToAddAThunk.md
include/lorethunk/Midware/Host/X11/: Lore_X11.h
include/lorethunk/Midware/Host/xcb/: Lore_xcb.h
include/lorethunk/ThunkExample/: Global.h  ThunkExample.h
include/lorethunk/ThunkUtils/Guest/libc-shim/: StdStream.h
scripts/: DumpSyms.py  FindMap.py
share/: install.cmake
share/lorelei/: ThunkDB.json
src/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/libs/Midware/: CMakeLists.txt
src/libs/Midware/Host/: CMakeLists.txt
src/libs/Midware/Host/X11/: CMakeLists.txt  Lore_X11.cpp
src/libs/Midware/Host/xcb/: CMakeLists.txt  Lore_xcb.cpp
src/libs/ThunkExample/: CMakeLists.txt  ThunkExample.cpp
src/thunks/: AddThunk.cmake  CMakeLists.txt
src/thunks/SDL2/: CMakeLists.txt  Desc.h  Manifest_guest.cpp  Manifest_host.cpp  Symbols_autogen.conf
src/thunks/ThunkExample/: CMakeLists.txt  Desc.h  LongDoubleConvert.h  Manifest_guest.cpp  Manifest_host.cpp  Symbols.conf
src/thunks/bzip2/: CMakeLists.txt  Desc.h  Manifest_guest.cpp  Symbols.conf
src/thunks/libc-shim/: CMakeLists.txt  Desc.h  Manifest_guest.cpp  Manifest_host.cpp  Symbols.conf
src/thunks/lzma/: CMakeLists.txt  Desc.h  Symbols.conf  Symbols_autogen.conf
src/thunks/openssl/: CMakeLists.txt
src/thunks/openssl/crypto/: CMakeLists.txt  Desc.h  Manifest_guest.cpp  Manifest_host.cpp  Symbols_autogen.conf
src/thunks/openssl/ssl/: CMakeLists.txt  Desc.h  Manifest_guest.cpp  Manifest_host.cpp  Symbols_autogen.conf
src/thunks/zlib/: CMakeLists.txt  Desc.h  Symbols.conf  Symbols_autogen.conf
